apps/prod/nginx-resource-identificators/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-resource-identificators
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: information-models.fellesdatakatalog.digdir.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-resource-identificators
                port:
                  number: 8080
    - host: catalogs.fellesdatakatalog.digdir.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-resource-identificators
                port:
                  number: 8080
